--- a/home/dot_profile.tmpl
+++ b/home/dot_profile.tmpl
@@ -22,11 +22,7 @@ if [ -d "${HOME}/.local/bin" ]; then
 fi
 
 # {{ if not .is_devcontainer -}}
-# pnpm
-export PNPM_HOME="${HOME}/.local/share/pnpm"
-case ":$PATH:" in
-  *":$PNPM_HOME:"*) ;;
-  *) export PATH="$PNPM_HOME:$PATH" ;;
-esac
-# pnpm end
+# Volta
+export VOLTA_HOME="$HOME/.volta"
+export PATH="$VOLTA_HOME/bin:$PATH"
 # {{- end }}
