macosの場合にdevcontainerと判定されてしまう問題を修正

--- a/home/.chezmoi.yaml.tmpl
+++ b/home/.chezmoi.yaml.tmpl
@@ -1,8 +1,9 @@
 {{- $ubuntu := hasKey .chezmoi.osRelease "ubuntuCodename" -}}
+{{- $macos := hasKey .chezmoi.os "darwin" -}}
 {{- $wsl := or (env "WSL_DISTRO_NAME") (env "IS_WSL") | not | not -}}
 {{- $devcontainer := or (env "REMOTE_CONTAINERS") (env "CODESPACES") (env "VSCODE_REMOTE_CONTAINERS_SESSION") (env "GITPOD_HOST") | not | not -}}
 
-{{- $minimum := or $devcontainer (not $ubuntu) -}}
+{{- $minimum := or $devcontainer (and (not $ubuntu) (not $macos)) -}}
 
 {{/* Here we "export" the variables, so we can access them outside this file */ -}}
 data:
