スクリプトの実行タイミングを変更

--- a/home/.chezmoiscripts/run_once_after_01_setup_node.sh.tmpl
+++ b/home/.chezmoiscripts/run_once_after_01_setup_node.sh.tmpl
@@ -1,3 +1,4 @@
+# {{ if not .is_devcontainer -}}
 #!/bin/bash
 
 # ~/setup_node.sh
@@ -64,3 +65,4 @@ main() {
 
 setup_color
 main "$@"
+# {{- end }}
