ubuntuのパッケージ更新スクリプトを追加

--- a/home/.chezmoi.yaml.tmpl
+++ b/home/.chezmoi.yaml.tmpl
@@ -63,6 +63,7 @@
 
 {{/* Here we "export" the variables, so we can access them outside this file */ -}}
 data:
+  is_ubuntu: {{ $ubuntu }}
   is_macos: {{ $macos }}
   is_windows: {{ $windows }}
   is_wsl: {{ $wsl }}
