wslで使用時にパッケージ更新スクリプトを実行するよう変更

--- a/home/.chezmoiscripts/run_once_before_ubuntu_00_update.sh.tmpl
+++ b/home/.chezmoiscripts/run_once_before_ubuntu_00_update.sh.tmpl
@@ -3,7 +3,7 @@
 # ~/update.sh
 # ============================================================
 
-# {{- if and .is_ubuntu (not .is_devcontainer) -}}
+# {{- if and (or .is_ubuntu .is_wsl) (not .is_devcontainer) -}}
 
 sudo apt update
 sudo apt upgrade
