--- a/home/.chezmoiscripts/run_once_before_ubuntu_00_update.sh.tmpl
+++ b/home/.chezmoiscripts/run_once_before_ubuntu_00_update.sh.tmpl
@@ -3,9 +3,16 @@
 # ~/update.sh
 # ============================================================
 
-# {{- if and (or .is_ubuntu .is_wsl) (not .is_devcontainer) -}}
+# {{- if and (not .is_macos) (not .is_windows) (not .is_devcontainer) -}}
 
-sudo apt update
-sudo apt upgrade
+which apt 2> /dev/null
+
+if [ $? -eq 0 ]; then
+    sudo apt -y update
+    sudo apt -y upgrade
+else
+    sudo yum -y update
+    sudo yum -y upgrade
+fi
 
 # {{- end }}
