--- a/home/.chezmoiscripts/run_once_before_ubuntu_00_update.sh.tmpl
+++ b/home/.chezmoiscripts/run_once_before_ubuntu_00_update.sh.tmpl
@@ -5,8 +5,9 @@
 
 # {{- if and (not .is_macos) (not .is_windows) (not .is_devcontainer) -}}
 
-which apt 2> /dev/null
+printf -- "Update packages...\n"
 
+which apt 2> /dev/null
 if [ $? -eq 0 ]; then
     sudo apt -y update
     sudo apt -y upgrade
