--- a/home/.chezmoiscripts/run_once_before_linux_00_update.sh.tmpl
+++ b/home/.chezmoiscripts/run_once_before_linux_00_update.sh.tmpl
@@ -3,15 +3,17 @@
 # ~/update.sh
 # ============================================================
 
-# {{- if and (not .is_macos) (not .is_windows) (not .is_devcontainer) -}}
+# {{- if and (not .is_macos) (not .is_windows) (not .is_devcontainer) }}
 
-printf -- "Update packages...\n"
+printf -- "\n%s=== Update packages... ===%s\n"
 
 which apt 2> /dev/null
 if [ $? -eq 0 ]; then
+    printf -- "%sUpdating packages using apt...%s\n"
     sudo apt -y update
     sudo apt -y upgrade
 else
+    printf -- "%sUpdating packages using yum...%s\n"
     sudo yum -y update
     sudo yum -y upgrade
 fi
