--- a/home/.chezmoi.yaml.tmpl
+++ b/home/.chezmoi.yaml.tmpl
@@ -64,7 +64,7 @@
 
 {{/* Here we "export" the variables, so we can access them outside this file */ -}}
 data:
-  is_lunux: {{ $linux }}
+  is_linux: {{ $linux }}
   is_ubuntu: {{ $ubuntu }}
   is_macos: {{ $macos }}
   is_windows: {{ $windows }}
