linuxの判定式を修正

--- a/home/.chezmoiscripts/run_before_00_dotfiles.sh.tmpl
+++ b/home/.chezmoiscripts/run_before_00_dotfiles.sh.tmpl
@@ -5,7 +5,7 @@
 
 printf -- "\n%s=== Start setup with dotfiles... ===%s\n"
 
-# {{- if .is_lunux }}
+# {{- if .is_linux }}
 printf -- "%sLinux: true%s\n"
 # {{- else }}
 printf -- "%sLinux: false%s\n"
