--- a/home/.chezmoiscripts/run_once_after_20_darwin_setup_node.sh.tmpl
+++ b/home/.chezmoiscripts/run_once_after_20_darwin_setup_node.sh.tmpl
@@ -1,6 +1,6 @@
 #!/bin/sh
 
-# ~/install_packages.sh
+# ~/setup_node.sh
 # ============================================================
 
 # {{- if and .is_macos (not .is_devcontainer) }}
@@ -16,6 +16,7 @@ main() {
     if ! command_exists volta; then
         printf -- "%sInstalling Volta...%s\n"
         curl https://get.volta.sh | bash -s -- --skip-setup
+        source "${HOME}/.profile"
     fi
 
     if command_exists volta; then
@@ -30,6 +31,9 @@ main() {
         # Install pnpm
         printf -- "%sInstalling pnpm using Volta...%s\n"
         volta install pnpm
+    else
+        printf -- "%sVolta not installed.%s\n"
+        exit 0
     fi
 }
 
