--- a/home/.chezmoiscripts/run_once_after_linux_20_setup_node.sh.tmpl
+++ b/home/.chezmoiscripts/run_once_after_linux_20_setup_node.sh.tmpl
@@ -16,7 +16,8 @@ main() {
     if ! command_exists volta; then
         printf -- "%sInstalling Volta...%s\n"
         curl https://get.volta.sh | bash -s -- --skip-setup
-        source "${HOME}/.profile"
+        export VOLTA_HOME="$HOME/.volta"
+        export PATH="$VOLTA_HOME/bin:$PATH"
     fi
 
     if command_exists volta; then
