--- a/home/.chezmoi.yaml.tmpl
+++ b/home/.chezmoi.yaml.tmpl
@@ -69,7 +69,7 @@
 {{- if $interactive -}}
 {{-   range $i := until 99 -}}
 {{-     $question := "❔ Do you use GitHub with 1Password [y/N]" -}}
-{{-     $answer := "n" -}}
+{{-     $answer := false -}}
 {{-     $answer = promptBool $question -}}
 {{-     if $answer -}}
 {{-       $op = true -}}
@@ -79,7 +79,6 @@
 {{-       writeToStdout "✅ Not use GitHub with 1Password\n" -}}
 {{-     end -}}
 {{-     break -}}
-{{-     writeToStdout (printf "❌ '%s' is an invalid input\n" $answer) -}}
 {{-     if eq $i 98 -}}
 {{-       writeToStdout "❌ ERROR: maximum tries exceeded\n" -}}
 {{-       exit 1 -}}
