1passwordから秘密鍵を取得する処理を修正

--- a/home/.chezmoi.yaml.tmpl
+++ b/home/.chezmoi.yaml.tmpl
@@ -68,7 +68,7 @@
 {{- end -}}
 {{- if $interactive -}}
 {{-   range $i := until 99 -}}
-{{-     $question := "❔ Do you use GitHub with 1Password [y/N]" -}}
+{{-     $question := "❔ Do you use GitHub with 1Password" -}}
 {{-     $op = promptBool $question -}}
 {{-     if $op -}}
 {{-       writeToStdout "✅ Use GitHub with 1Password\n" -}}
