1passwordを利用したsshの設定を削除

--- a/home/.chezmoiscripts/run_once_after_linux_30_setup_docker.sh.tmpl
+++ b/home/.chezmoiscripts/run_once_after_linux_30_setup_docker.sh.tmpl
@@ -1,6 +1,6 @@
 #!/bin/sh
 
-# ~/setup_node.sh
+# ~/setup_docker.sh
 # ============================================================
 
 # {{- if and .is_linux (not .is_macos) (not .is_devcontainer) }}
