--- a/home/.chezmoiscripts/run_once_after_20_darwin_setup_node.sh.tmpl
+++ b/home/.chezmoiscripts/run_once_after_20_darwin_setup_node.sh.tmpl
@@ -17,6 +17,8 @@ main() {
         printf -- "%sInstalling Volta...%s\n"
         curl https://get.volta.sh | bash -s -- --skip-setup
         source "${HOME}/.profile"
+    else
+        printf -- "%sVolta already installed, skipping.%s\n"
     fi
 
     if command_exists volta; then
