--- a/home/.chezmoiscripts/run_once_after_00_darwin_install_homebrew.sh.tmpl
+++ b/home/.chezmoiscripts/run_once_after_00_darwin_install_homebrew.sh.tmpl
@@ -16,6 +16,12 @@ main() {
     if ! command_exists brew || [ $CI ]; then
         printf -- "%sInstalling Homebrew...%s\n"
         /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
+
+        # {{- if eq .chezmoi.arch "arm64" }}
+        eval "$(/opt/homebrew/bin/brew shellenv)"
+        # {{- else }}
+        eval "$(/usr/local/bin/brew shellenv)"
+        # {{- end }}
     else
         printf -- "%sHomebrew already installed, skipping.%s\n"
     fi
