--- a/home/dot_profile.tmpl
+++ b/home/dot_profile.tmpl
@@ -26,3 +26,11 @@ fi
 export VOLTA_HOME="$HOME/.volta"
 export PATH="$VOLTA_HOME/bin:$PATH"
 # {{- end }}
+
+# {{- if .is_macos }}
+# {{- if eq .chezmoi.arch "arm64" }}
+eval "$(/opt/homebrew/bin/brew shellenv)"
+# {{- else }}
+eval "$(/usr/local/bin/brew shellenv)"
+# {{- end }}
+# {{- end }}
