Homebrewのbundleを実行する際のオプションを変更

--- a/home/.chezmoiscripts/run_once_after_10_darwin_install_packages.sh.tmpl
+++ b/home/.chezmoiscripts/run_once_after_10_darwin_install_packages.sh.tmpl
@@ -14,10 +14,9 @@ main() {
 
     # Install packages
     if command_exists brew; then
-        brew doctor
-        brew upgrade
-        brew bundle --global
         brew cleanup
+        brew doctor
+        brew bundle --file=~/.Brewfile --verbose --no-upgrade --no-lock
     else
         printf -- "%sHomebrew not installed.%s\n"
         exit 0
