作業ディレクトリの作成処理を追加

--- a/home/.chezmoiscripts/run_before_00_dotfiles.sh.tmpl
+++ b/home/.chezmoiscripts/run_before_00_dotfiles.sh.tmpl
@@ -33,3 +33,6 @@ printf -- "%son VSCode Dev Containers: false%s\n"
 printf -- "\n%sNot supported.%s\n"
 exit 0
 # {{- end }}
+
+# Create workspace
+mkdir ~/workspace
