brewでインストールに失敗したパッケージがあっても残りの処理を継続するよう変更

--- a/home/.chezmoiscripts/run_once_after_darwin_10_install_packages.sh.tmpl
+++ b/home/.chezmoiscripts/run_once_after_darwin_10_install_packages.sh.tmpl
@@ -16,7 +16,7 @@ main() {
     if command_exists brew; then
         brew cleanup
         brew doctor
-        brew bundle --file=~/.Brewfile --verbose --no-upgrade --no-lock
+        brew bundle --file=~/.Brewfile --verbose --no-upgrade --no-lock || true
     else
         printf -- "%sHomebrew not installed.%s\n"
         exit 0
