--- a/home/.chezmoiscripts/run_once_after_ubuntu_10_install_packages.sh.tmpl
+++ b/home/.chezmoiscripts/run_once_after_ubuntu_10_install_packages.sh.tmpl
@@ -16,6 +16,11 @@ main() {
     if command_exists exa; then
         sudo apt install -y exa
     fi
+    if command_exists bat; then
+        sudo apt install -y bat
+        mkdir -p ~/.local/bin
+        ln -s /usr/bin/batcat ~/.local/bin/bat
+    fi
 
 }
 
