--- a/home/.chezmoi.yaml.tmpl
+++ b/home/.chezmoi.yaml.tmpl
@@ -65,19 +65,21 @@
 {{- if hasKey . "mas" -}}
 {{-   $mas = .mas -}}
 {{- end -}}
-{{- if $interactive -}}
-{{-   range $i := until 99 -}}
-{{-     $question := "❔ Do you want to install applications from App Store" -}}
-{{-     $mas = promptBool $question -}}
-{{-     if $mas -}}
-{{-       writeToStdout "✅ Install applications from App Store\n" -}}
-{{-     else -}}
-{{-       writeToStdout "✅ Not install applications from App Store\n" -}}
-{{-     end -}}
-{{-     break -}}
-{{-     if eq $i 98 -}}
-{{-       writeToStdout "❌ ERROR: maximum tries exceeded\n" -}}
-{{-       exit 1 -}}
+{{- if $macos -}}
+{{-   if $interactive -}}
+{{-     range $i := until 99 -}}
+{{-       $question := "❔ Do you want to install applications from App Store" -}}
+{{-       $mas = promptBool $question -}}
+{{-       if $mas -}}
+{{-         writeToStdout "✅ Install applications from App Store\n" -}}
+{{-       else -}}
+{{-         writeToStdout "✅ Not install applications from App Store\n" -}}
+{{-       end -}}
+{{-       break -}}
+{{-       if eq $i 98 -}}
+{{-         writeToStdout "❌ ERROR: maximum tries exceeded\n" -}}
+{{-         exit 1 -}}
+{{-       end -}}
 {{-     end -}}
 {{-   end -}}
 {{- end -}}
