--- a/home/.chezmoiscripts/run_once_after_ubuntu_10_install_packages.sh.tmpl
+++ b/home/.chezmoiscripts/run_once_after_ubuntu_10_install_packages.sh.tmpl
@@ -13,8 +13,11 @@ main() {
     printf -- "\n%s=== Install packages... ===%s\n"
 
     # Install packages
-    if command_exists exa; then
-        sudo apt install -y exa
+    if command_exists eza; then
+        wget -qO- https://raw.githubusercontent.com/eza-community/eza/main/deb.asc | sudo tee /etc/apt/trusted.gpg.d/gierens.asc
+        echo "deb http://deb.gierens.de stable main" | sudo tee /etc/apt/sources.list.d/gierens.list
+        sudo apt update
+        sudo apt install -y eza
     fi
     if command_exists bat; then
         sudo apt install -y bat
