fix: xcodeが既にインストールされている場合にエラーで終了しないよう修正

--- a/home/.chezmoiscripts/run_before_darwin_00.sh.tmpl
+++ b/home/.chezmoiscripts/run_before_darwin_00.sh.tmpl
@@ -4,6 +4,8 @@
 
 # Xcode Command Line Tools
 printf -- "%sXcode Command Line Tools%s\n"
-xcode-select --install
+if ! xcode-select --install; then
+  printf -- "%sXcode Command Line Tools already installed, skipping.%s\n"
+fi
 
 # {{- end }}
