chore: 出力メッセージを調整

--- a/home/.chezmoiscripts/run_before_darwin_00.sh.tmpl
+++ b/home/.chezmoiscripts/run_before_darwin_00.sh.tmpl
@@ -3,7 +3,7 @@
 # {{- if .darwin }}
 
 # Xcode Command Line Tools
-printf -- "%sXcode Command Line Tools%s\n"
+printf -- "\n%sXcode Command Line Tools%s\n"
 if ! xcode-select --install; then
   printf -- "%sXcode Command Line Tools already installed, skipping.%s\n"
 fi
