chore: sshのエイリアスを追加

--- a/home/dot_profile.tmpl
+++ b/home/dot_profile.tmpl
@@ -44,7 +44,7 @@ fi
 
 # {{- if .wsl }}
 
-# WSL
+# VSCode
 export PATH="/mnt/c/users/hirat/AppData/Local/Programs/Microsoft VS Code/bin:$PATH"
 
 # {{- end }}
