--- a/home/dot_bash_aliases.tmpl
+++ b/home/dot_bash_aliases.tmpl
@@ -20,3 +20,11 @@ fi
 if command -v bat > /dev/null 2>&1; then
   alias cat='bat'
 fi
+
+# {{- if .wsl }}
+
+# SSH
+alias ssh='ssh.exe'
+alias ssh-add='ssh-add.exe'
+
+# {{- end }}
