feat: phpとcomposerとlaravelの設定を追加

--- a/home/.chezmoiscripts/run_after_darwin_01.sh.tmpl
+++ b/home/.chezmoiscripts/run_after_darwin_01.sh.tmpl
@@ -41,7 +41,7 @@ main() {
     printf -- "%sVolta already installed, skipping.%s\n"
   fi
 
-  # Node.JS
+  # Node.JS / PNPM / Yarn
   printf -- "\n%sNode.JS%s\n"
   if command_exists volta; then
     volta install node
