fix: 1passwordのパスをmicrosoft store版のものに変更

--- a/home/dot_config/git/config.tmpl
+++ b/home/dot_config/git/config.tmpl
@@ -68,7 +68,7 @@
 
 [gpg "ssh"]
   # {{- if .wsl }}
-  program = "/mnt/c/Users/hirat/AppData/Local/1Password/app/8/op-ssh-sign-wsl"
+  program = "/mnt/c/Users/hirat/AppData/Local/Microsoft/WindowsApps/op-ssh-sign-wsl.exe"
   # {{- end }}
 
 [commit]
