fix: voltaからmiseへ移行

--- a/home/dot_profile.tmpl
+++ b/home/dot_profile.tmpl
@@ -21,9 +21,8 @@ if [ -d "${HOME}/.local/bin" ]; then
   export PATH="${HOME}/.local/bin:${PATH}"
 fi
 
-# Volta
-export VOLTA_HOME="$HOME/.volta"
-export PATH="$VOLTA_HOME/bin:$PATH"
+# mise
+eval "$(mise activate bash)"
 
 # {{- if .darwin }}
 
