--- a/home/.chezmoiscripts/run_after_darwin_01.sh.tmpl
+++ b/home/.chezmoiscripts/run_after_darwin_01.sh.tmpl
@@ -32,29 +32,12 @@ main() {
     printf -- "%sbrew command not found, skipping.%s\n"
   fi
 
-  # Volta
-  printf -- "\n%sVolta%s\n"
-  if ! command_exists volta; then
-    curl https://get.volta.sh | bash -s -- --skip-setup
-    source "${HOME}/.profile"
-  else
-    printf -- "%sVolta already installed, skipping.%s\n"
-  fi
-
   # Node.JS / PNPM / Yarn
   printf -- "\n%sNode.JS%s\n"
-  if command_exists volta; then
-    volta install node
-    volta install pnpm
-    volta install yarn@1
-    if ! command_exists amplify; then
-      npm install -g @aws-amplify/cli
-    fi
-    if ! command_exists aws-mfa; then
-      npm install -g @hiratake/aws-mfa
-    fi
+  if command_exists mise; then
+    mise install
   else
-    printf -- "%svolta command not found, skipping.%s\n"
+    printf -- "%smise command not found, skipping.%s\n"
   fi
 
   # Docker
