--- a/home/.chezmoiscripts/run_after_wsl_01.sh.tmpl
+++ b/home/.chezmoiscripts/run_after_wsl_01.sh.tmpl
@@ -41,27 +41,32 @@ main() {
     printf -- "%sbat already installed, skipping.%s\n"
   fi
 
-  # Volta
-  printf -- "\n%sVolta%s\n"
-  if ! command_exists volta; then
-    curl https://get.volta.sh | bash -s -- --skip-setup
-    source "${HOME}/.profile"
+  # mise
+  printf -- "\n%sMISE-EN-PLACE%s\n"
+  if ! command_exists mise; then
+    sudo install -dm 755 /etc/apt/keyrings
+    curl -fSs https://mise.jdx.dev/gpg-key.pub | sudo tee /etc/apt/keyrings/mise-archive-keyring.pub 1> /dev/null
+    # {{- if eq .chezmoi.arch "arm64" }}
+    echo "deb [signed-by=/etc/apt/keyrings/mise-archive-keyring.pub arch=arm64] https://mise.jdx.dev/deb stable main" | sudo tee /etc/apt/sources.list.d/mise.list
+    # {{- else }}
+    echo "deb [signed-by=/etc/apt/keyrings/mise-archive-keyring.pub arch=amd64] https://mise.jdx.dev/deb stable main" | sudo tee /etc/apt/sources.list.d/mise.list
+    # {{- end }}
+    sudo apt update
+    sudo apt install -y mise
   else
-    printf -- "%sVolta already installed, skipping.%s\n"
+    printf -- "%smise already installed, skipping.%s\n"
   fi
 
   # Node.JS / PNPM / Yarn
   printf -- "\n%sNode.JS%s\n"
-  if command_exists volta; then
-    volta install node
-    volta install pnpm
-    volta install yarn@1
+  if command_exists mise; then
+    mise install
   else
     printf -- "%svolta command not found, skipping.%s\n"
   fi
 
   # PHP / Composer / Laravel
-  printf -- "\n%sVolta%s\n"
+  printf -- "\n%sPHP%s\n"
   if ! command_exists php; then
     /bin/bash -c "$(curl -fsSL https://php.new/install/linux/8.4)"
   else
