--- a/home/dot_profile.tmpl
+++ b/home/dot_profile.tmpl
@@ -22,7 +22,7 @@ if [ -d "${HOME}/.local/bin" ]; then
 fi
 
 # mise
-eval "$(mise activate bash)"
+eval "$(mise activate zsh)"
 
 # {{- if .darwin }}
 
